--- a/index.html
+++ b/index.html
@@ -40,16 +40,48 @@
                     <li>
                         <a 
                         target="blank"
-                        href="https://www.twitch.tv/directory/game/Fortnite">
-                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/33214-188x250.jpg" alt="Jogo Fortnite">
+                        href="https://www.twitch.tv/directory/game/God%20of%20War">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/6369_IGDB-144x192.jpg" alt="Jogo God of War">
                         </a>
                     </li>
 
                     <li>
                         <a 
                         target="blank"
-                        href="https://www.twitch.tv/directory/game/VALORANT">
-                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/516575-188x250.jpg" alt="Jogo Valorant">
+                        href="https://www.twitch.tv/directory/game/NBA%202K23">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/772421245_IGDB-188x250.jpg" alt="Jogo NBA">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a 
+                        target="blank"
+                        href="https://www.twitch.tv/directory/game/Call%20of%20Duty%3A%20Modern%20Warfare%20II">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/1678052513_IGDB-285x380.jpg" alt="Jogo COD: MWII">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a 
+                        target="blank"
+                        href="https://www.twitch.tv/directory/game/The%20Last%20of%20Us%20Part%20I">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/294724507_IGDB-285x380.jpg" alt="Jogo The Last Of Us">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a 
+                        target="blank"
+                        href="https://www.twitch.tv/directory/game/Ghost%20of%20Tsushima">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/499856_IGDB-144x192.jpg" alt="Jogo Ghost of Tsushima">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a 
+                        target="blank"
+                        href="https://www.twitch.tv/directory/game/FIFA%2022">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/1869092879_IGDB-144x192.jpg" alt="Jogo FIFA 22">
                         </a>
                     </li>
                 </ul>
